--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,10 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "universal-cookie": "^6.1.1",
     "vue": "^2.7.10",
     "vue-cookies": "^1.8.3",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
-  },
-  "devDependencies": {}
+  }
 }
